# leadpin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  build.ps1  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
backend/: .env.example  package-lock.json  package.json  schema.sql  tsconfig.json
backend/src/: index.ts
backend/src/controllers/: business.controller.ts  list.controller.ts  user-settings.controller.ts  whatsapp.controller.ts
backend/src/middleware/: auth.ts
backend/src/routes/: list.routes.ts  storage.routes.ts  subscription.routes.ts  user-settings.routes.ts  whatsapp.routes.ts
backend/src/services/: scraper.ts  subscription.ts  whatsapp.ts
backend/src/utils/: supabase.ts
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ProtectedRoute.tsx
src/components/business/: BusinessInfoCard.tsx  ContactSection.tsx  OutreachHistory.tsx  OutreachPanel.tsx
src/components/dashboard/: AccountDialog.tsx  AddToListModal.tsx  ExpiringLeadsBanner.tsx  FilterBar.tsx  ImportListDialog.tsx  LeadTable.tsx  StatsBar.tsx  (+11 more)
src/hooks/: useBusiness.ts  useBusinesses.ts  useIsLinkOwner.ts  useOutreach.ts  useScrapeJob.ts
src/lib/: api-client.ts  message-generator.ts  query-keys.ts  supabase.ts  utils.ts
src/pages/: AuthPage.tsx  BusinessDetailPage.tsx  DashboardPage.tsx
src/providers/: QueryProvider.tsx
src/types/: index.ts
(+19 files in other folders)
